--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,10 @@ dj-rest-auth
 django-allauth
 django-cors-headers
 pandas
+numpy
+openai==0.19.0
+openpyxl==3.0.9
+pandas==1.3.4
+pandas-stubs==1.2.0.35
+pycodestyle==2.8.0
+python-dateutil==2.8.2
